[gd_scene load_steps=4 format=3 uid="uid://d1kl4pw4ld0y"]

[ext_resource type="Texture2D" uid="uid://p34uh0nyyvub" path="res://assets/corkboard_ns_paper_3.png" id="1_2fv06"]
[ext_resource type="Script" path="res://Scripts/easy_click.gd" id="2_oyq5a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6jyvw"]
size = Vector2(455, 515)

[node name="easy_click" type="Sprite2D"]
self_modulate = Color(0.911536, 0.973885, 0, 1)
position = Vector2(1.00001, 7.98702e-06)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_2fv06")
centered = false
script = ExtResource("2_oyq5a")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 2.49997
offset_top = -2.50003
offset_right = 499.5
offset_bottom = 466.5
flat = true

[node name="time" type="Label" parent="."]
offset_left = 392.5
offset_top = 12.5
offset_right = 451.5
offset_bottom = 72.5
theme_override_font_sizes/font_size = 30
text = "0.56"
clip_text = true

[node name="click_me" type="Label" parent="."]
offset_left = 15.0
offset_top = 17.5
offset_right = 151.0
offset_bottom = 65.5
rotation = -0.0229706
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Click Me
1 Points"
clip_text = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(245, 217.5)
shape = SubResource("RectangleShape2D_6jyvw")

[node name="time_bar" type="ColorRect" parent="."]
offset_left = 15.0
offset_top = -33.0
offset_right = 465.0
offset_bottom = -10.0
color = Color(0, 1, 0, 1)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
